--- a/assets/testDash.css
+++ b/assets/testDash.css
@@ -18,6 +18,25 @@ img {
 
 }
 
+#pageContent #backgroundimage{
+  min-width: 100%;
+  height: 100%;
+  width: 100%;
+  position: center;
+  
+}
+
+
+#firstpage{
+  color: black;
+  font-size: 30px;
+  position: center;
+  font-family: OCR A Std, monospace;
+  margin:0px;
+  font-weight: bold;
+  
+}
+
 #instructions{
   color: navy;
   font-size: 40px;
@@ -39,8 +58,14 @@ hr{
   width: 90%;
   margin-left: 5%;
   height: 80%;
-  margin-top: 10%;
+  margin-top: 7%;
   text-align: center;
+  background-image:url("firstpage2.png");
+  opacity: 50;
+}
+
+#pageContent2{
+  background-color: white;
 }
 #text {
   color: black;
@@ -83,6 +108,7 @@ hr{
   z-index: 2;
   display: table;   /* Allow the centering to work */
   margin: 0 auto;
+  max-width:100%;
 }
 #homepage #content{
   margin:auto;
@@ -107,6 +133,7 @@ height:50px;
 	width: 100%;
   margin-right: 0px;
   margin-left: 0px;
+  max-width:100%;
 }
 
  #navigation {
