--- a/assets/testDash.css
+++ b/assets/testDash.css
@@ -202,6 +202,9 @@ li a:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+nav{
+  background: linear-gradient(to right, white, RGB(161,179,246) )
+}
 
 #bottom_page {
   margin: 0 ;
