--- a/assets/testDash.css
+++ b/assets/testDash.css
@@ -18,6 +18,21 @@ img {
 
 }
 
+#tutorialTitle{
+  margin :30px;
+  background-color: lightgrey;
+  text-align: center;
+  font-size: 35px;
+}
+
+#tutorialText{
+  text-align: left;
+  line-height: 2.1;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  
+}
+
 #pageContent #backgroundimage{
   min-width: 100%;
   height: 100%;
